# graph-sound-rust

./: Cargo.toml  README.md  currency_data.csv
src/: fetchdata.rs  main.rs  soundplay.rs  utils.rs
templates/: index.html
