[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17.3"
rand = "0.8"
actix-web = "4"
actix-files = "0.6.5"
tera = "1.0"
env_logger = "0.10.0"
chrono = "0.4"